--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/node": "22.10.5",
+    "@types/node": "22.10.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/three": "^0.172.0",
     "@types/vscode": "^1.96.0",
     "typescript": "^5.7.2",
-    "vite-plugin-wasm": "^3.4.1",
-    "vite": "6.0.7"
+    "vite": "6.0.7",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
