--- a/package.json
+++ b/package.json
@@ -40,14 +40,21 @@
     "package": "vsce package"
   },
   "dependencies": {
-    "@react-three/drei": "9.120.8",
-    "@react-three/fiber": "8.17.12",
+    "@kurkle/color": "^0.3.4",
+    "@react-three/drei": "^9.121.1",
+    "@react-three/fiber": "^9.0.0-rc",
     "@vitejs/plugin-react": "4.3.4",
+    "bootstrap": "^5.3.3",
+    "browser-fs-access": "^0.35.0",
     "comlink": "^4.3.1",
     "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "path": "^0.12.7",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "polished": "^4.3.1",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
+    "react-dom": "^19.0.0",
     "replicad": "^0.17.4",
     "replicad-opencascadejs": "^0.17.4",
     "replicad-threejs-helper": "^0.17.0",
@@ -56,10 +63,11 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "22.10.6",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/three": "^0.172.0",
     "@types/vscode": "^1.96.0",
+    "sass-embedded": "^1.83.4",
     "typescript": "^5.7.2",
     "vite": "6.0.7",
     "vite-plugin-wasm": "^3.4.1"
